<resources>
    <string name="app_name">Tukang Online</string>
    <string name="lg_Email">Masukan Email</string>

    <string name="login">Login</string>

    <string name="kl1">Laki-Laki</string>

    <string name="kl2">Perempuan</string>

    <string name="daftar">Daftar</string>

    <string name="lg_Pass">Masukan Password</string>

    <string name="lg_kata">Belum punya akun? Daftar disini</string>

    <string name="rg_kata">Sudah mendaftar? Login disini</string>
    <string name="btEd">Edit Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_bantuan">Bantuan</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_activity_home">Home</string>
    <string-array name="jenis">
        <item>Tukang</item>
        <item>Bukan Tukang</item>
    </string-array>

</resources>
